--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "morgan": "~1.5.3",
     "psi": "^1.0.6",
     "serve-favicon": "~2.2.1",
-    "socket.io": "~1.3.6"
+    "socket.io": "~1.3.6",
+    "webpagetest": "^0.3.3"
   },
   "description": "ERROR: No README data found!",
   "main": "app.js",
