--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "dependencies": {
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
-    "express": "~4.12.4",
     "debug": "~2.2.0",
+    "express": "~4.12.4",
     "morgan": "~1.5.3",
     "psi": "^1.0.6",
     "socket.io": "~1.3.6",
-    "webpagetest": "^0.3.3"
+    "webpagetest": "^0.3.3",
+    "xhr": "^2.1.0"
   },
   "description": "ERROR: No README data found!",
   "main": "app.js",
