--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "morgan": "~1.5.3",
     "psi": "^1.0.6",
     "socket.io": "~1.3.6",
-    "webpagetest": "^0.3.3",
-    "xhr": "^2.1.0"
+    "webpagetest": "^0.3.3"
   },
   "description": "ERROR: No README data found!",
   "main": "app.js",
