--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "morgan": "~1.5.3",
+    "node-bitlyapi": "^0.4.0",
     "psi": "^1.0.6",
     "socket.io": "~1.3.6",
     "webpagetest": "^0.3.3"
