--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.5.3",
     "node-bitlyapi": "^0.4.0",
     "psi": "^1.0.6",
+    "shelljs": "^0.5.3",
     "socket.io": "~1.3.6",
     "webpagetest": "^0.3.3"
   },
