--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "ip": "^1.1.0",
     "morgan": "~1.5.3",
     "multer": "^1.1.0",
     "node-bitlyapi": "^0.4.0",
     "psi": "^1.0.6",
+    "request": "^2.67.0",
     "shelljs": "^0.5.3",
     "socket.io": "~1.3.6",
     "webpagetest": "^0.3.3"
